--- a/Modeling Canvas/Modeling Canvas.csproj
+++ b/Modeling Canvas/Modeling Canvas.csproj
@@ -9,4 +9,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
