--- a/Modeling Canvas/Modeling Canvas.csproj
+++ b/Modeling Canvas/Modeling Canvas.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.6.1" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
   </ItemGroup>
 
