Refactored rendering of point transformations

--- a/Modeling Canvas/Modeling Canvas.csproj
+++ b/Modeling Canvas/Modeling Canvas.csproj
@@ -10,6 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Extensions\DrawingContextAffineExtensions.cs" />
+    <Compile Remove="Extensions\DrawingContextProjectiveExtensions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.6.1" />
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
