Refactored elements UI rendering process

--- a/Modeling Canvas/Modeling Canvas.csproj
+++ b/Modeling Canvas/Modeling Canvas.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <Compile Remove="Extensions\DrawingContextAffineExtensions.cs" />
     <Compile Remove="Extensions\DrawingContextProjectiveExtensions.cs" />
+    <Compile Remove="UIElements\CustomRectangle.cs" />
   </ItemGroup>
 
   <ItemGroup>
